# ComputerGraphics

./: .gitignore
BlinkingTriangle/: CMakeLists.txt
BlinkingTriangle/Sources/: Main.cpp
ColorTriangle/: CMakeLists.txt  build.sh  run.sh
ColorTriangle/Sources/: Main.cpp
MathUtils/: CMakeLists.txt  build.sh
MathUtils/Headers/: math_utils.h
MathUtils/Sources/: Main.cpp  math_utils.cpp
TexturedTriangle/: CMakeLists.txt  build.sh  clean.sh  run.sh
TexturedTriangle/Sources/: Main.cpp
Triangle/: CMakeLists.txt
Triangle/Sources/: Main.cpp
